# collab-benchmark-test

./: .buildinfo  README.md  config.yaml  genindex.html  index.html  objects.inv  poetry.toml  publish_results.py  pyproject.toml  readme.html  results_b1.html  results_b2.html  run_this_benchmark.py  search.html  searchindex.js
.github/workflows/: pub_docs_and_results.yml  run_benchmarks.yml
_sources/: index.md.txt  readme.md.txt  results_b1.md.txt
docs/source/: conf.py
new_method_examples/: method_new_basic_template_octave.py
results/: index.md  results_b2.md
results/b1/: plot_LinearChirp.html  results_LinearChirp.csv
results/b2/: plot_LinearChirp.html
src/: src.md
src/methods/: __init__.py  methods.md
src/utilities/: utilities.md
